# tekom_aitrenkin

./: CMakeLists.txt  main.cpp
